[gd_scene load_steps=9 format=3 uid="uid://bg0nxe4bxdesn"]

[ext_resource type="Script" path="res://editor/Editor.gd" id="1_qtpau"]
[ext_resource type="Script" path="res://scenes/Player/Sprite.gd" id="3_gvyou"]
[ext_resource type="PackedScene" uid="uid://b50u22ac7kuap" path="res://scenes/Tiles/savedtilemap/SavedTileMap.tscn" id="4_82d7c"]
[ext_resource type="Texture2D" uid="uid://n32hsqeasyep" path="res://res/tiles.svg" id="4_wfxpc"]

[sub_resource type="InputEventKey" id="InputEventKey_fyfmr"]
device = -1
keycode = 72
unicode = 104

[sub_resource type="Shortcut" id="Shortcut_fy67k"]
events = [SubResource("InputEventKey_fyfmr")]

[sub_resource type="InputEventKey" id="InputEventKey_0nhwg"]
device = -1
keycode = 76
unicode = 108

[sub_resource type="Shortcut" id="Shortcut_livu2"]
events = [SubResource("InputEventKey_0nhwg")]

[node name="Editor" type="Node2D"]
script = ExtResource("1_qtpau")
marker_offset = Vector2(32, 32)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MouseControl" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -83.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Tiles" type="HBoxContainer" parent="CanvasLayer/MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TileOptionButton" type="OptionButton" parent="CanvasLayer/MarginContainer/PanelContainer/HBoxContainer/Tiles"]
unique_name_in_owner = true
layout_mode = 2
item_count = 7
selected = 0
popup/item_0/text = "Block"
popup/item_0/id = 0
popup/item_1/text = "Slope"
popup/item_1/id = 1
popup/item_2/text = "Goal"
popup/item_2/id = 2
popup/item_3/text = "Trampoline"
popup/item_3/id = 3
popup/item_4/text = "Speed"
popup/item_4/id = 4
popup/item_5/text = "Spike"
popup/item_5/id = 5
popup/item_6/text = "Spike shooter"
popup/item_6/id = 6

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="Controls" type="HBoxContainer" parent="CanvasLayer/MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="Left90" type="Button" parent="CanvasLayer/MarginContainer/PanelContainer/HBoxContainer/Controls"]
layout_mode = 2
shortcut = SubResource("Shortcut_fy67k")
text = "↻ 90deg"

[node name="Right90" type="Button" parent="CanvasLayer/MarginContainer/PanelContainer/HBoxContainer/Controls"]
layout_mode = 2
shortcut = SubResource("Shortcut_livu2")
text = "↺ 90deg"

[node name="TileMap" parent="." instance=ExtResource("4_82d7c")]

[node name="AddMarker" type="Sprite2D" parent="."]
modulate = Color(0.523, 1, 0.46, 0.572549)
texture = ExtResource("4_wfxpc")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite" type="Node2D" parent="."]
script = ExtResource("3_gvyou")
radius = 23.0
color = Color(0.839216, 0.270588, 0.270588, 1)

[connection signal="gui_input" from="CanvasLayer/MouseControl" to="." method="_on_mouse_control_gui_input"]
[connection signal="item_selected" from="CanvasLayer/MarginContainer/PanelContainer/HBoxContainer/Tiles/TileOptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/PanelContainer/HBoxContainer/Controls/Left90" to="." method="_on_left_90_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/PanelContainer/HBoxContainer/Controls/Right90" to="." method="_on_right_90_pressed"]
